<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/add_in_heritage_toolbar"
        android:layout_width="match_parent"
        app:theme="@style/AddInHeritageToolBarStyle"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/container"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".addInHeritage.AddInHeritageFragment">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_avatar"
                app:met_baseColor="@color/colorTextLight"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="@color/colorPrimary"
                app:met_textColorHint="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/surname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_surname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
                app:met_baseColor="@color/colorTextLight"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="@color/colorPrimary"
                app:met_textColorHint="@color/colorAccent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/age_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surname_edit_text">


                <com.ramotion.fluidslider.FluidSlider
                    android:id="@+id/age_fluid_slider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:bar_color="@color/colorPrimary"
                    app:bar_text_color="@color/colorAccent"
                    app:bubble_color="@color/colorPrimaryDark"
                    app:bubble_text_color="@color/colorAccent"
                    app:initial_position="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/select_age_text_view"
                    app:layout_constraintStart_toStartOf="@+id/select_age_text_view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:size="small"
                    app:text_size="15sp" />

                <TextView
                    android:id="@+id/select_age_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/please_select_age"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/age_fluid_slider" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#c0c0c0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender_switch" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#c0c0c0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age_container" />

            <io.ghyeok.stickyswitch.widget.StickySwitch
                android:id="@+id/gender_switch"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gender_text_view"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:ss_animationDuration="600"
                app:ss_animationType="line"
                app:ss_iconPadding="18dp"
                app:ss_iconSize="16dp"
                app:ss_leftIcon="@drawable/ic_male"
                app:ss_rightIcon="@drawable/ic_female"
                app:ss_selectedTextSize="14sp"
                app:ss_sliderBackgroundColor="@color/colorPrimary"
                app:ss_switchColor="@color/colorPrimaryDark"
                app:ss_textColor="@color/colorTextLight"
                app:ss_textSize="12sp" />

            <TextView
                android:id="@+id/gender_text_view"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/please_select_gender"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/gender_switch"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/gender_switch" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_avatar"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="32dp"
                android:elevation="4dp"
                android:src="@drawable/ic_account_circle"
                app:civ_circle_background_color="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/rip_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_rip"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/profile_avatar"
                app:layout_constraintEnd_toEndOf="@+id/profile_avatar"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="@+id/profile_avatar"
                app:layout_constraintTop_toTopOf="@+id/profile_avatar"
                app:layout_constraintVertical_bias="0.0" />

            <com.polyak.iconswitch.IconSwitch
                android:id="@+id/switch_die"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:isw_icon_right="@drawable/ic_rip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date_birthday_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/please_select_date_birthday"
                app:layout_constraintEnd_toStartOf="@+id/selected_birthday_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/selected_birthday_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="31.01.1990"
                app:layout_constraintBottom_toBottomOf="@+id/date_birthday_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/date_birthday_text_view" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/date_died_container"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_birthday_text_view">

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#c0c0c0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date_died_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/please_select_date_birthday"
                    app:layout_constraintEnd_toStartOf="@+id/selected_died_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3" />

                <TextView
                    android:id="@+id/selected_died_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="31.01.1990"
                    app:layout_constraintBottom_toBottomOf="@+id/date_died_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/date_died_text_view" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
